--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,9 +27,10 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 zip = "2.2"
 walkdir = "2"
-image = "0.25"
+image = { version = "0.25", features = ["jpeg", "png", "gif", "webp"] }
 base64 = "0.22"
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1", features = ["full", "rt-multi-thread"] }
+rayon = "1.10"
 axum = { version = "0.7", optional = true }
 tower = { version = "0.5", optional = true }
 tower-http = { version = "0.6", features = ["fs", "cors"], optional = true }
@@ -38,8 +39,28 @@ window-vibrancy = "0.5"
 chrono = { version = "0.4", features = ["serde"] }
 reqwest = { version = "0.12", features = ["json", "stream"] }
 futures-util = "0.3"
+dashmap = "6.1"
+parking_lot = "0.12"
 
 [features]
 default = ["web-server"]
 web-server = ["axum", "tower", "tower-http"]
+
+[profile.dev]
+opt-level = 1
+incremental = true
+debug = true
+
+[profile.release]
+opt-level = 3
+lto = "fat"
+codegen-units = 1
+strip = true
+panic = "abort"
+overflow-checks = false
+
+[profile.release-with-debug]
+inherits = "release"
+debug = true
+strip = false
 
