--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -41,6 +41,7 @@ reqwest = { version = "0.12", features = ["json", "stream"] }
 futures-util = "0.3"
 dashmap = "6.1"
 parking_lot = "0.12"
+regex = "1.10"
 
 [features]
 default = ["web-server"]
