--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -42,6 +42,8 @@ futures-util = "0.3"
 dashmap = "6.1"
 parking_lot = "0.12"
 regex = "1.10"
+uuid = { version = "1.11", features = ["v4", "serde"] }
+tokio-util = "0.7"
 
 [features]
 default = ["web-server"]
