--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
           tagName: ${{ github.ref_name }}
           releaseName: 'Minecraft Resourcespack Editor ${{ github.ref_name }}'
           releaseBody: 'See the assets to download this version and install.'
-          releaseDraft: true
+          releaseDraft: false
           prerelease: true
 
   sync-to-gitee:
